k8s/crash-test/dummy-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-depl
  labels:
    app: dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy
  template:
    metadata:
      name: dummy
      labels:
        app: dummy
    spec:
      containers:
        - name: dummy
          image: dummy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: dummy-clusterip-srv
# spec:
#   selector:
#     app.kubernetes.io/name: dummies
#   ports:
#     - protocol: TCP
#       port: 8000
#       targetPort: 8000
apiVersion: v1
kind: Service
metadata:
  name: dummy-nodeport-srv
spec:
  type: NodePort
  selector:
    app: dummy
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
